2004-06-19  MenTaLguY  <mental@rydia.net>

	* src/desktop.cpp, src/managed.h, src/rect-context.cpp,
	  src/rect-context.h, src/selection.h, src/view.cpp:

	  SPSelection now derives from Inkscape::Managed

2004-06-19  Carl Hetherington  <inkscape@carlh.net>

	* src/desktop-snap.{cpp,h}: sp_desktop_dim_snap_list returns
	whether or not it snapped anything.

	* src/select-context.cpp: fix snap on move behaviour (again)

	* src/widgets/dash-selector.cpp: fix off-by-one spotted by
	valgrind.
	
2004-06-19  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/libnrtype/FontFactory.cpp, src/libnrtype/FontInstance.cpp
	* src/extension/internal/ps.cpp (begin): Add some basic error handling.

	* src/extension/internal/ps.cpp (setup): Simplify an expression now that
	  _bitmap is a bool.

	* src/extension/internal/ps.h: Twiddle the order of the fields.
	  Replace bitfields with bool/short.

	* src/libnrtype/Makefile_insert, src/libnrtype/FontInstance.h,
	  src/make.files, src/make.ofiles, src/make.dep:
	  Remove src/libnrtype/FontInstance.h (see change below).

	* src/libnrtype/RasterFont.h, src/libnrtype/raster-glyph.h,
	  src/libnrtype/raster-position.h:
	  Move raster_glyph, raster_position from RasterFont.h to new files
	  raster-glyph.h, raster-position.h.
	* src/libnrtype/Makefile_insert: Add the new files to SOURCES.

	* src/libnrtype/FontInstance.h, src/libnrtype/font-glyph.h,
	  src/libnrtype/font-instance.h, src/libnrtype/font-style.h:
	  Move font_glyph, font_instance, and font_style definitions from
	  FontInstance.h into new files font-glyph.h, font-instance.h,
	  font-style.h.
	* src/libnrtype/Makefile_insert: Add the new files to SOURCES.

	* src/libnrtype/nrtype-forward.h: New file.
	* src/libnrtype/Makefile_insert: Add it to SOURCES.
	* src/libnrtype/FontFactory.h, src/libnrtype/TextWrapper.h:
	  #include it (replacing local declarations in some cases).

	* src/livarot/livarot-forward.h: New file.